desktop navbar items

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,9 @@
 body {
     font-family: "Inclusive Sans", sans-serif;
 }
+
+@layer utilities {
+    .navbar-link {
+        @apply relative ml-5 mr-5 w-[135px] text-center text-black transition-all duration-150 hover:text-green-500 data-[status=true]:text-xl data-[status=true]:text-green-500 dark:text-white dark:hover:text-green-500 dark:data-[status=true]:text-green-500;
+    }
+}
