--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,10 +4,24 @@
 
 body {
     font-family: "Inclusive Sans", sans-serif;
+    scrollbar-width: thin;
+    scrollbar-color: var(bg-neutral-800) var(bg-green-500);
 }
 
 @layer utilities {
     .navbar-link {
         @apply relative ml-5 mr-5 w-[135px] text-center text-black transition-all duration-150 hover:text-green-500 data-[status=true]:text-xl data-[status=true]:text-green-500 dark:text-white dark:hover:text-green-500 dark:data-[status=true]:text-green-500;
     }
+}
+
+::-webkit-scrollbar {
+    @apply h-2 w-2;
+}
+
+::-webkit-scrollbar-track {
+    @apply bg-neutral-800;
+}
+
+::-webkit-scrollbar-thumb {
+    @apply mx-2 rounded-md bg-green-500;
 }
